# fastapi_template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  init_project.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 10caa1f30538_init.py
config/: __init__.py
controllers/: __init__.py
controllers/v1/: __init__.py
controllers/v1/helloworld/: __init__.py
db/: __init__.py
db/models/: __init__.py
docker/: .env.example  docker-compose.yaml  entrypoint.sh
middlewares/: __init__.py  task_supervisor.py
responses/: __init__.py
storage/db/: __init__.py
storage/db/models/: __init__.py
tests/: __init__.py  main.py  test_example.py
utils/: feishu_webhook_utils.py  jwt_utils.py  process_lock.py  redis_utils.py  scheduler_utils.py  sqlmodel_patch.py
utils/async_utils/: __init__.py  async_sort.py  call_coroutine.py  task_group.py
utils/task_queue/: __init__.py  task_queue.py
utils/vector_db_utils/: __init__.py  exceptions.py  schemas.py  vector_db_utils.py
