[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "alembic",
]


line-length = 80
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = [
    "A",  # flake8-annotations
    "B", # flake8-bugbear rules
    "F", # pyflakes rules
    "N",  #  name style rules
    "I", # isort rules
    "UP",   # pyupgrade rules
    "E101", # mixed-spaces-and-tabs
    "E111", # indentation-with-invalid-multiple
    "E112", # no-indented-block
    "E113", # unexpected-indentation
    "E115", # no-indented-block-comment
    "E116", # unexpected-indentation-comment
    "E117", # over-indented
    "RUF019", # unnecessary-key-check
    "RUF100", # unused-noqa
    "RUF101", # redirected-noqa
    "S506", # unsafe-yaml-load
    "W191", # tab-indentation
    "W605", # invalid-escape-sequence
]
ignore = [
    "B904" # raise-without-from-inside-except
]

fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_[a-zA-Z0-9_]*|)$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false


[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
    "fastapi.Path",
    "fastapi.params.Path",
    "fastapi.Body",
    "fastapi.params.Body",
    "fastapi.Form",
    "fastapi.params.Form",
    "fastapi.Header",
    "fastapi.params.Header",
    "fastapi.File",
    "fastapi.params.File",
    "fastapi.Cookie",
    "fastapi.params.Cookie",
    "fastapi.Security",
    "fastapi.params.Security",
]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.pylint]

disable = ["all"]  # diable all rule first
enable = ["too-many-statements"]  # then enable too-many-statements rule
max-statements = 50  # function max statement
